--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "traking server status of the terminals",
   "main": "gaiatracker.js",
   "dependencies": {
+    "fs": "0.0.1-security",
     "node-schedule": "^1.2.3",
     "node-webhooks": "^1.2.4",
     "ping": "^0.2.2"
